# gnsi

./: BUILD.bazel  MODULE.bazel  WORKSPACE  deps.bzl  gnsi_deps.bzl  go.mod  go.sum
.github/workflows/: proto_breaking.yml
acctz/: BUILD.bazel  acctz.pb.go  acctz_grpc.pb.go
authz/: BUILD.bazel  authz.pb.go  authz_grpc.pb.go
bazel/: cc_grpc_library.bzl
certz/: BUILD.bazel  certz.pb.go  certz.proto  certz_grpc.pb.go
credentialz/: BUILD.bazel  credentialz.pb.go  credentialz_grpc.pb.go
pathz/: BUILD.bazel  pathz.pb.go  pathz_grpc.pb.go
