module(
    name = "openconfig_gnsi",
)

bazel_dep(name = "gazelle", version = "0.37.0", repo_name = "bazel_gazelle")
bazel_dep(name = "grpc", version = "1.65.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "27.2", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_go", version = "0.48.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.0.0-alpha2")
bazel_dep(name = "openconfig_gnmi", version = "0.0.0")

# grpc-java is only included to fix "bazel mod graph".
bazel_dep(name = "grpc-java", version = "1.64.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.5")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "org_golang_google_grpc", "org_golang_google_grpc_cmd_protoc_gen_go_grpc", "org_golang_google_protobuf")

git_override(
    module_name = "openconfig_gnmi",
    commit = "a1403286fbeefb5d87152b48f4102d6507a8576b",
    remote = "https://github.com/bstoll/gnmi",
)
