load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_cpp//:defs.bzl", "cpp_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "certz_proto",
    srcs = ["certz.proto"],
    import_prefix = "github.com/openconfig/gnsi",
    deps = [
        "@com_google_protobuf//:any_proto",
    ],
)

##############################################################################
# C++
##############################################################################

cpp_grpc_library(
    name = "certz_cc_proto",
    protos = [
        ":certz_proto",
    ],
)

##############################################################################
# Go
##############################################################################

go_proto_library(
    name = "certz_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc_v2",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    importpath = "github.com/openconfig/gnsi/certz",
    proto = ":certz_proto",
)

go_library(
    name = "certz",
    embed = [":certz_go_proto"],
    importpath = "github.com/openconfig/gnsi/certz",
)
