load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_cpp//:defs.bzl", "cpp_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "pathz_proto",
    srcs = [
        "pathz.proto",
    ],
    import_prefix = "github.com/openconfig/gnsi",
    deps = [
        "@openconfig_gnmi//proto/gnmi:gnmi_proto",
    ],
)

##############################################################################
# C++
##############################################################################
cpp_grpc_library(
    name = "pathz_cc_proto",
    protos = [
        ":pathz_proto",
    ],
    deps = [
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_proto",
    ],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "pathz_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc_v2",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    importpath = "github.com/openconfig/gnsi/pathz",
    proto = ":pathz_proto",
    deps = [
        "@openconfig_gnmi//proto/gnmi:gnmi_go_proto",
    ],
)

go_library(
    name = "pathz",
    embed = [":pathz_go_proto"],
    importpath = "github.com/openconfig/gnsi/pathz",
)
